--- a/client_side/src/Components/Home/Home.scss
+++ b/client_side/src/Components/Home/Home.scss
@@ -241,7 +241,7 @@
                 flex-direction: column;
                 background-color: #6c4177;
                 width: 300px;
-                height: 600px;
+                height: auto;
                 text-align: center;
                 border-radius: 10px;
                 -webkit-border-radius: 10px;
@@ -250,8 +250,13 @@
                 -o-border-radius: 10px;
 
                 h3 {
-                    font-size: 30px;
+                    font-size: 26px;
                     padding: 20px;
+
+                    span {
+                        font-size: 28px;
+                        color: #fff;
+                    }
                 }
 
                 hr {
@@ -275,17 +280,17 @@
                 }
 
                 ul {
-                    padding: 20px;
+                    padding: 25px;
                     li {
                         list-style: none;
                     }
                 }
 
-                button {
-                    width: 200px;
+                a {
+                    padding: 10px;
+                    text-decoration: none;
                     background-color: #fff;
                     color: #6c4177;
-                    height: 50px;
                     font-size: 30px;
                     font-family: Dand;
                     border: none;
@@ -296,6 +301,8 @@
                     -o-border-radius: 10px;
                     margin-bottom: 20px;
                     transition: all ease 0.3s;
+                    top: -10px;
+                    position: relative;
 
                     &:hover {
                         transform: scale(0.98);
@@ -619,7 +626,6 @@
     }
 
     .carousel-swiper2 {
-
         @media screen and (max-width: 900px) {
             display: none;
         }
