--- a/client_side/src/index.css
+++ b/client_side/src/index.css
@@ -28,7 +28,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #CFB1D7;
+  background-color: #ead0f1;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
